# grs-interpreter

grs_interpreter/: CMakeLists.txt
grs_interpreter/include/ast/: ast.hpp
grs_interpreter/include/lexer/: token.hpp
grs_interpreter/include/parser/: parser.hpp
grs_interpreter/src/: main.cpp
